--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -2,7 +2,6 @@
 <resources>
     <string name="wallet_activity_name">Plånbok</string>
 
-    <string name="menu_testnet">Testnet</string>
     <string name="menu_about">Om</string>
     <string name="menu_privacy">Sekretesspolicy</string>
 
@@ -42,14 +41,7 @@
 
     <string name="info_send_xmrto_success_order_label">XMR.TO-beställning</string>
 
-    <string name="info_send_xmrto_success_sending">Skickar</string>
     <string name="info_send_xmrto_success_btc">%1$s BTC</string>
-
-    <string name="info_txdetails_xmrto_key">Nyckel:</string>
-    <string name="info_txdetails_xmrto_address">Adress:</string>
-    <string name="info_txdetails_xmrto_status">Status:</string>
-    <string name="info_txdetails_xmrto_amount">%1$s BTC</string>
-
 
     <string name="info_send_xmrto_paid">Väntar på bekräftelse</string>
     <string name="info_send_xmrto_unpaid">Väntar på betalning</string>
@@ -83,16 +75,11 @@
 
     <string name="label_send_settings_advanced">Avancerat:</string>
 
-    <string name="label_send_btc_details">Klicka för fler detaljer</string>
     <string name="label_send_btc_xmrto_info">Besök xmr.to för support &amp; spårning</string>
-    <string name="label_send_txinfo">Se TX-detaljer för mer information</string>
     <string name="label_send_btc_xmrto_key_lb">Hemlig nyckel\nXMR.TO</string>
     <string name="label_send_btc_xmrto_key">XMR.TO hemlig nyckel</string>
     <string name="label_send_btc_address">Måladress för BTC</string>
     <string name="label_send_btc_amount">Belopp</string>
-    <string name="label_send_btc_create_order">Skapar XMR.TO-beställning</string>
-
-    <string name="label_send_btc_retry">Tryck för att försöka igen</string>
 
     <string name="label_send_txid">Transaktions-ID</string>
     <string name="label_send_address">Måladress</string>
@@ -107,21 +94,15 @@
 
     <string name="service_progress">Gör klart några saker …\nDetta kan ta lite tid!</string>
 
-    <string name="backup_success">Säkerhetskopia sparad</string>
     <string name="backup_failed">Det gick inte att säkerhetskopiera!</string>
-    <string name="archive_success">Arkivering utförd</string>
     <string name="archive_failed">Det gick inte att arkivera!</string>
-    <string name="delete_failed">Det gick inte att ta bort!</string>
     <string name="rename_failed">Det gick inte att byta namn!</string>
     <string name="changepw_failed">Det gick inte att ändra lösenord!</string>
     <string name="changepw_success">Lösenordet har ändrats</string>
 
     <string name="label_daemon">Nod</string>
     <string name="prompt_daemon">([&lt;användare&gt;:&lt;lösenord&gt;@]&lt;daemon&gt;[:&lt;port&gt;])</string>
-    <string name="prompt_mainnet">Val av nät</string>
-    <string name="status_walletlist_loading">Läser in plånbokslista</string>
     <string name="status_wallet_loading">Läser in plånbok …</string>
-    <string name="status_wallet_unloading">Sparar plånbok</string>
     <string name="status_wallet_unloaded">Plånbok sparad</string>
     <string name="status_wallet_unload_failed">Det gick inte att spara plånbok!</string>
     <string name="status_wallet_connecting">Ansluter …</string>
@@ -130,12 +111,9 @@
     <string name="status_wallet_node_invalid">Ogiltig nod!\nPröva någon annan.</string>
     <string name="status_wallet_connect_ioex">Noden kan inte nås!\nFörsök igen eller en annan nod.</string>
 
-    <string name="status_working">Jobbar på det …</string>
     <string name="status_wallet_disconnected">Frånkopplad</string>
 
-    <string name="status_transaction_sent">Transaktionen skickades!</string>
     <string name="status_transaction_failed">Transaktionen misslyckades: %1$s</string>
-    <string name="status_transaction_prepare_failed">Det gick inte att skapa transaktion!</string>
 
     <string name="send_xmrto_timeout">Du väntade för länge!</string>
 
@@ -151,35 +129,22 @@
     <string name="bad_fingerprint">Fingeravtrycket känns inte igen. Försök igen.</string>
     <string name="bad_password">Lösenordet är fel!</string>
     <string name="bad_wallet">Plånboken finns inte!</string>
-    <string name="error_not_wallet">Detta är ingen plånbok!</string>
     <string name="prompt_daemon_missing">Nodens adress måste anges!</string>
     <string name="prompt_wrong_net">Plånboken matchar inte valt nät</string>
-    <string name="warn_daemon_unavailable">Det går inte att ansluta till noden! Försök igen.</string>
-    <string name="panic">Något är fel!</string>
 
     <string name="label_watchonly">(Granskning)</string>
 
     <string name="label_wallet_receive">Ta emot</string>
     <string name="label_wallet_send">Ge</string>
 
-    <string name="title_amount">Belopp</string>
-    <string name="title_date">Datum</string>
     <string name="xmr_unconfirmed_amount">+ %1$s XMR obekräftade</string>
-    <string name="label_transactions">Transaktioner</string>
-    <string name="text_daemonConnected">Daemonen ansluten!</string>
 
     <string name="service_description">monerujo-tjänsten</string>
-    <string name="local_service_started">monerujo-tjänsten körs</string>
-    <string name="local_service_stopped">monerujo-tjänsten har stoppats</string>
-    <string name="local_service_label">monerujo-tjänsten</string>
-    <string name="local_service_connected">monerujo-tjänsten är ansluten</string>
-    <string name="local_service_disconnected">monerujo-tjänsten är frånkopplad</string>
 
     <string name="status_synced">Synkade:</string>
     <string name="status_remaining">Återstående block</string>
     <string name="status_syncing">Skannar:</string>
 
-    <string name="prompt_problems">Problem</string>
     <string name="message_strorage_not_writable">Externt lagringsutrymme är skrivskyddat! Panik!</string>
     <string name="message_strorage_not_permitted">Vi behöver verkligen behörighet för Externt lagringsutrymme!</string>
     <string name="message_camera_not_permitted">Ingen kamera = Ingen QR-skanning!</string>
@@ -191,8 +156,6 @@
     <string name="message_copy_xmrtokey">XMR.TO-nyckel kopierades till urklipp!</string>
     <string name="message_copy_address">Plånboksadress kopierades till urklipp!</string>
     <string name="message_copy_txid">Transaktions-ID kopierades till urklipp!</string>
-    <string name="message_noselect_seed">Val av startvärde är inaktiverat av säkerhetsskäl!</string>
-    <string name="message_noselect_key">Val av spendernyckel är inaktiverat av säkerhetskäl!</string>
     <string name="message_nocopy">Kopiering är inaktiverad av säkerhetskäl!</string>
 
     <string name="message_exchange_failed">Det gick inte att hämta växelkurs!\nAnvänd XMR/XMR eller försök igen</string>
@@ -205,12 +168,7 @@
     <string name="generate_bad_passwordB">Lösenfraserna matchar inte</string>
     <string name="generate_empty_passwordB">Lösenfrasen får inte vara tom</string>
     <string name="generate_buttonGenerate">Skapa min plånbok nu då!</string>
-    <string name="generate_seed">Minnesbaserat startvärde</string>
     <string name="generate_button_accept">Jag har skrivit ner det minnesbaserade startvärdet</string>
-
-    <string name="generate_button_backup">Säkerhetskopiera</string>
-    <string name="generate_button_export">Exportera nycklar</string>
-    <string name="generate_button_delete">TA BORT</string>
 
     <string name="generate_wallet_name">Ge mig ett namn!</string>
     <string name="generate_wallet_exists">Plånboken finns!</string>
@@ -232,13 +190,10 @@
     <string name="generate_mnemonic_hint">Minnesbaserat startvärde på 25 ord</string>
     <string name="generate_restoreheight_hint">Återställningshöjd eller datum (ÅÅÅÅ-MM-DD)</string>
 
-    <string name="generate_wallet_label">Plånbok</string>
-    <string name="generate_password_label">Lösenord</string>
     <string name="generate_address_label">Publik adress</string>
     <string name="generate_viewkey_label">Granskningsnyckel</string>
     <string name="generate_spendkey_label">Spendernyckel</string>
     <string name="generate_mnemonic_label">Minnesbaserat startvärde</string>
-    <string name="generate_restoreheight_label">Återställningshöjd:</string>
     <string name="generate_crazypass_label">Lösenord för återställning av plånboksfiler</string>
 
     <string name="generate_check_key">Ange en giltig nyckel</string>
@@ -251,20 +206,13 @@
     <string name="send_paymentid_hint">Betalnings-ID (valfritt)</string>
     <string name="send_amount_hint">0,00</string>
     <string name="send_notes_hint">Privat anteckning (valfri)</string>
-    <string name="send_priority_hint">Tx-prioritet</string>
-    <string name="send_mixin_hint">Mixin</string>
-    <string name="send_sweep_hint">Svep</string>
     <string name="send_generate_paymentid_hint">Skapa</string>
     <string name="send_qr_hint">Skanna</string>
-    <string name="send_prepare_hint">Förbered</string>
-    <string name="send_dispose_hint">Kasta bort (Ångra)</string>
     <string name="send_send_label">Spendera mina Moneroj</string>
     <string name="send_send_timed_label">Spendera mina Moneroj (%1$s)</string>
-    <string name="send_really_send_hint">Sista steget - Bekräfta!</string>
     <string name="send_qr_invalid">Inte en QR-kod</string>
     <string name="send_qr_address_invalid">Inte en giltig QR-kod för betalning</string>
     <string name="send_address_invalid">Inte en giltig adress</string>
-    <string name="send_preparing_progress">Förbereder transaktion</string>
     <string name="send_title">Skicka</string>
     <string name="send_available">Saldo: %1$s XMR</string>
     <string name="send_address_title">Adress</string>
@@ -272,13 +220,10 @@
     <string name="send_settings_title">Inställningar</string>
     <string name="send_confirm_title">Bekräfta</string>
     <string name="send_success_title">Färdig</string>
-    <string name="send_summary_heading">Sammanfattning</string>
-    <string name="send_amount_too_large">Belopp &gt; Tillgångar</string>
 
     <string name="send_amount_label">Belopp</string>
     <string name="send_fee_btc_label">Avgift (XMR)</string>
     <string name="send_fee_label">Avgift</string>
-    <string name="send_dust_label">Damm</string>
     <string name="send_total_btc_label">Summa (XMR)</string>
     <string name="send_total_label">Summa</string>
 
@@ -287,18 +232,14 @@
 
     <string name="send_create_tx_error_title">Ett fel uppstod när transaktion skapades</string>
 
-    <string name="tx_list_fee_pending">inkl. %1$s avgift</string>
     <string name="tx_list_fee">- Avgift %1$s</string>
     <string name="tx_list_amount_failed">(%1$s)</string>
     <string name="tx_list_failed_text">misslyckades</string>
     <string name="tx_list_amount_negative">- %1$s</string>
     <string name="tx_list_amount_positive">+ %1$s</string>
 
-    <string name="tx_status_btc">Status</string>
-    <string name="tx_address">Adress</string>
     <string name="tx_timestamp">Tidsstämpel</string>
     <string name="tx_id">TX-ID</string>
-    <string name="tx_id_btc">TX-ID\n(BTC)</string>
     <string name="tx_key">TX-nyckel</string>
     <string name="tx_destination">Mål</string>
     <string name="tx_destination_btc">Mål\n(BTC)</string>
@@ -309,30 +250,20 @@
     <string name="tx_fee">Avgift</string>
     <string name="tx_transfers">Överföringar</string>
     <string name="tx_notes">Anteckningar</string>
-    <string name="tx_button_copy">Kopiera till urklipp</string>
-    <string name="tx_copy_message">Kopierades till urklipp</string>
-    <string name="tx_copy_label">Transaktionsdetaljer</string>
     <string name="tx_notes_hint">(valfritt)</string>
     <string name="tx_button_notes">Spara</string>
-    <string name="tx_notes_set">Anteckningarna sparades</string>
     <string name="tx_notes_set_failed">Det gick inte att spara anteckningarna</string>
     <string name="tx_title">Transaktionsdetaljer</string>
 
     <string name="tx_pending">VÄNTANDE</string>
     <string name="tx_failed">MISSLYCKAD</string>
 
-    <string name="receive_generate_hint">Visa QR-koden</string>
-    <string name="receive_paymentid_button">Skapa</string>
     <string name="receive_paymentid_hint">Betalnings-ID (valfritt)</string>
     <string name="receive_amount_hint">Belopp</string>
-    <string name="receive_amount_xmr_hint">XMR</string>
     <string name="receive_cannot_open">Det gick inte att öppna plånboken!</string>
     <string name="receive_paymentid_invalid">16 eller 64 hexadecimala tecken (0–9, a–f)</string>
     <string name="receive_integrated_paymentid_invalid">Måste vara tomt med en integrerad adress</string>
-    <string name="receive_bitcoin_paymentid_invalid">Måste vara tomt med en bitcoin-adress</string>
-    <string name="receive_amount_invalid">Måste vara &gt; 0</string>
 
-    <string name="receive_amount_empty">Ange värde</string>
     <string name="receive_amount_too_big">Max. %1$s</string>
     <string name="receive_amount_negative">Min. 0</string>
     <string name="receive_amount_nan">XMR är inte ett tal</string>
@@ -359,4 +290,16 @@
     <string name="fab_restore_viewonly">Återställ granskningsplånbok</string>
     <string name="fab_restore_key">Återställ plånbok från privata nycklar</string>
     <string name="fab_restore_seed">Återställ plånbok från startvärde på 25 ord</string>
+
+    <string name="prompt_open_wallet">Opening the wallet&#8230;</string>
+    <string name="bad_saved_password">Saved password is incorrect.\nPlease enter password manually.</string>
+
+    <string name="accounts_drawer_new">Create Account</string>
+    <string name="accounts_drawer_title">Accounts</string>
+    <string name="accounts_new">Added new account #%1$d</string>
+    <string name="tx_account">Account #</string>
+
+    <string name="send_sweepall">Send all confirmed funds in this account!</string>
+    <string name="tx_subaddress">Subaddress #%1$d</string>
+    <string name="generate_address_label_sub">Public Subaddress #%1$d</string>
 </resources>
