--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -317,5 +317,5 @@
     <string name="generate_address_label_sub">附属公开地址 #%1$d</string>
 
     <string name="menu_language">语言</string>
-    <string name="language_system_default">使用系统默认语言</string>
+    <string name="language_system_default">使用系统语言</string>
 </resources>
