--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -318,5 +318,5 @@
     <string name="generate_address_label_sub">Public Subaddress #%1$d</string>
 
     <string name="menu_language">語言</string>
-    <string name="language_system_default">使用系統預設語言</string>
+    <string name="language_system_default">使用系統語言</string>
 </resources>
