--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -345,11 +345,11 @@
     <string name="nfc_tag_read_success">已成功讀取此 NFC 標籤</string>
     <string name="nfc_tag_tap">可使用 NFC 標籤</string>
 
-    <string name="receive_desc_hint">Description (optional)</string>
+    <string name="receive_desc_hint">附註 (選填)</string>
 
-    <string name="send_address_not_openalias">OpenAlias address not available</string>
-    <string name="send_address_openalias">OpenAlias secure &#x2714;</string>
-    <string name="send_address_resolve_openalias">Resolving OpenAlias&#8230;</string>
-    <string name="send_address_no_dnssec">OpenAlias without DNSSEC - address may be spoofed</string>
-    <string name="send_address_hint">Receiver\'s XMR/BTC Address or OpenAlias</string>
+    <string name="send_address_not_openalias">無法使用這個 OpenAlias</string>
+    <string name="send_address_openalias">這個 OpenAlias 已確認安全可用 &#x2714;</string>
+    <string name="send_address_resolve_openalias">正在解析 OpenAlias &#8230;</string>
+    <string name="send_address_no_dnssec">這個 OpenAlias 沒有使用 DNSSEC - 地址有被欺騙的風險</string>
+    <string name="send_address_hint">收款者的 XMR/BTC 地址或 OpenAlias</string>
 </resources>
