--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -180,7 +180,7 @@
         <p>Avšak kvôli zvýšeniu bezpečnosti, monerujo bude stále vyžadovať heslo na zobrazenie detailov peňaženky a posielanie.</p>
         <strong>Bezpečnostné Varovanie</strong>
         <p>Monerujo Ti chce pripomenúť, že ktokoľvek kto získa prístup k Tvojim odtlačkom, bude schopný nazrieť do tvojej peňaženky.</p>
-        <p>Napríklad, záškodník niekde v blízkosti, môže otvoriť Tvoju peňaženku keď spíš.</p>
+        <p>Napríklad záškodník niekde v blízkosti môže otvoriť Tvoju peňaženku keď spíš.</p>
         <strong>Si si istý, že chceš povoliť túto funkciu?</strong>
     ]]></string>
     <string name="generate_bad_passwordB">Heslá nie sú rovnaké</string>
@@ -206,7 +206,7 @@
     <string name="generate_viewkey_hint">Prezerací Kľúč</string>
     <string name="generate_spendkey_hint">Platobný Kľúč</string>
     <string name="generate_mnemonic_hint">25-slovný mnemotechnický Seed</string>
-    <string name="generate_restoreheight_hint">Obnov Výšku alebo Dátum (YYYY-MM-DD)</string>
+    <string name="generate_restoreheight_hint">Dátum (YYYY-MM-DD) alebo Výška</string>
 
     <string name="generate_address_label">Verejná Adresa</string>
     <string name="generate_viewkey_label">Prezerací Kľúč</string>
@@ -345,11 +345,11 @@
     <string name="nfc_tag_read_success">Čítanie Tagu úspešné</string>
     <string name="nfc_tag_tap">NFC je dostupné!</string>
 
-    <string name="receive_desc_hint">Description (optional)</string>
+    <string name="receive_desc_hint">Popis (voliteľné)</string>
 
-    <string name="send_address_not_openalias">OpenAlias address not available</string>
-    <string name="send_address_openalias">OpenAlias secure &#x2714;</string>
-    <string name="send_address_resolve_openalias">Resolving OpenAlias&#8230;</string>
-    <string name="send_address_no_dnssec">OpenAlias without DNSSEC - address may be spoofed</string>
-    <string name="send_address_hint">Receiver\'s XMR/BTC Address or OpenAlias</string>
+    <string name="send_address_not_openalias">OpenAlias adresa nie je dostupná</string>
+    <string name="send_address_openalias">OpenAlias zabezpečený &#x2714;</string>
+    <string name="send_address_resolve_openalias">Prekladám OpenAlias&#8230;</string>
+    <string name="send_address_no_dnssec">OpenAlias bez DNSSEC - adresa môže byť zneužitá</string>
+    <string name="send_address_hint">Prijímateľova XMR/BTC Adresa alebo OpenAlias</string>
 </resources>
