--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -205,10 +205,10 @@
     <string name="generate_wallet_type_seed">Фраза</string>
     <string name="generate_wallet_type_view">Просмотр</string>
 
-    <string name="generate_address_label">Публичный адрес</string>
-    <string name="generate_viewkey_label">Ключ просмотра</string>
-    <string name="generate_spendkey_label">Ключ траты</string>
-    <string name="generate_mnemonic_label">Мнемоническая фраза</string>
+    <string name="generate_address_hint">Публичный адрес</string>
+    <string name="generate_viewkey_hint">Ключ просмотра</string>
+    <string name="generate_spendkey_hint">Ключ траты</string>
+    <string name="generate_mnemonic_hint">Мнемоническая фраза</string>
     <string name="generate_restoreheight_hint">Восстановить высоту или дату (YYYY-MM-DD)</string>
 
     <string name="generate_address_label">Публичный адрес</string>
